- make sure that debug messages are left aligned, even when used on pages with YUI

--- a/packages/acs-developer-support/www/resources/acs-developer-support.css
+++ b/packages/acs-developer-support/www/resources/acs-developer-support.css
@@ -113,6 +113,7 @@ div.developer-support-adp-output-off {
   padding: 6px;
   border: solid 1px gray;
   background-color: #e1e1e1;
+  text-align: left;
 }
 
 .developer-support-footer-off {
